<resources>
  <string-array name="allergies">
    <item>Pollen</item>
    <item>Animal dander</item>
    <item>Domestic dust</item>
    <item>Gluten</item>
    <item>Shellfish</item>
    <item>Eggs</item>
    <item>Fish</item>
    <item>Peanut</item>
    <item>Soy</item>
    <item>Milk (lactose)</item>
    <item>Nuts</item>
    <item>Celery</item>
    <item>Mustard</item>
    <item>Sesame seed</item>
    <item>Sulfur-dioxide</item>
    <item>Lupine</item>
    <item>Molluscs</item>
  </string-array>
  <string-array name="blood">
    <item>A</item>
    <item>B</item>
    <item>AB</item>
    <item>0</item>
  </string-array>
  <string-array name="bloodrh">
    <item>Rh-</item>
    <item>Rh+</item>
  </string-array>
  <string-array name="drawer_titles">
    <item>MAIN PAGE</item>
    <item>MAP</item>
    <item>SETTINGS</item>
    <item>INVITE</item>
    <item>EXIT</item>
  </string-array>
  <string name="gender">Gender</string>
  <string-array name="image_photo_sources">
    <item>@string/gallery_pick</item>
    <item>@string/camera_pick</item>
  </string-array>
  <string-array name="languages">
    <item>English</item>
    <item>Spanish</item>
    <item>Portuguese</item>
    <item>Russian</item>
    <item>Hungarian</item>
    <item>Italian</item>
    <item>French</item>
    <item>German</item>
    <item>Japanese</item>
    <item>Mandarin</item>
  </string-array>
  <string name="app_name">Save Me</string>
  <string name="your_name">User</string>
  <string name="facebook_app_id">1465145516906801</string>
  <string name="fb_login_protocol_scheme">fb1465145516906801</string>
  <string name="title_activity_maps">Map</string>
  <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
  <string name="location_permission_denied">This application requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings.</string>
  <string name="permission_required_toast">Location permission is required</string>
  <string name="action_settings">Settings</string>
  <string name="settings">Settings</string>
  <string name="save">Save</string>
  <string name="settingssaved">Settings are saved</string>
  <string name="drawer_open">Open</string>
  <string name="drawer_close">Close</string>
  <string name="enablegps">Location</string>
  <string name="enablegpstext">Please enable GPS services in the settings.</string>
  <string name="OK">OK</string>
  <string name="cancel">Cancel</string>
  <string name="welcome">Welcome!</string>
  <string name="init_page_text"><![CDATA[<p style=\"margin:0;padding:0;\">Thanks for downloading this app. Please watch the introduction video under these lines and sign in or create your profile. Let the save me application cares for you.</p>]]></string>
  <string name="start_setup">Start up</string>
  <string name="invitation_title">Send App invitation</string>
  <string name="invitation_message">I recommend downloading the Save Me! app</string>
  <string name="invitation_deep_link">Send App invitation</string>
  <string name="invitation_custom_image">Send App invitation</string>
  <string name="invitation_cta">Send App invitation</string>
  <string name="fa_bars"></string>
  <string name="fa_lock"></string>
  <string name="fa_key"></string>
  <string name="fa_user"></string>
  <string name="fa_email"></string>
  <string name="fa_id"></string>
  <string name="fa_birth"></string>
  <string name="fa_settle"></string>
  <string name="fa_back"></string>
  <string name="fa_info"></string>
  <string name="fa_search"></string>
  <string name="loadingIcon"></string>
  <string name="playIcon"></string>
  <string name="stopIcon"></string>
  <string name="crash_toast_text"></string>
  <string name="lorem"></string>
  <string name="image_dir_name"></string>
  <string name="next">Next</string>
  <string name="prev">Previous</string>
  <string name="finish">Save</string>
  <string name="no_item_selected">Nincs</string>
  <string name="image_preview">Preview</string>
  <string name="gallery_pick">Choose from gallery</string>
  <string name="camera_pick">Take a picture</string>
  <string name="hint_choose_date">Select date</string>
  <string name="label_current_item_picked">Chosen:\t</string>
  <string name="label_choose_item_picked">Nothing is selected</string>
  <string name="label_current_days_picked">Selected day:\t</string>
  <string name="label_days">\t days</string>
  <string name="search_hint">Searching...</string>
  <string name="no_result_found">No match</string>
  <string name="select_country">Select your country</string>
  <string name="label_basic">Identification</string>
  <string name="sublabel_basic">Enter basic information</string>
  <string name="name1">Surname</string>
  <string name="name2">Given name</string>
  <string name="addnew">Add new guardian</string>
  <string name="email">Email address</string>
  <string name="national">Citizenship</string>
  <string name="bday">Birth date</string>
  <string name="insurancenum">Social insurance number</string>
  <string name="label_contact">Contacts</string>
  <string name="sublabel_contact">Contact settings</string>
  <string name="myphone">Phone number</string>
  <string name="fbprofile">Facebook profile</string>
  <string name="whatsapp">WhatsApp</string>
  <string name="skype">Skype</string>
  <string name="viber">Viber</string>
  <string name="snapchat">Snapchat</string>
  <string name="label_health">Health insurance and medical information</string>
  <string name="sublabel_health">This information will appear when medical info button is pressed, or in an emergency, and also it will be sent to the selected information channels.</string>
  <string name="bloodtype">Blood type</string>
  <string name="bloodtyperh">Blood type - Rh type</string>
  <string name="height">Height</string>
  <string name="weight">Weight</string>
  <string name="allergy">Allergies</string>
  <string name="medicalinfo">Past or continuous medical intervention / supervision</string>
  <string name="medicines">Your permanent medicines</string>
  <string name="choosed_country">Selected country</string>
  <string name="doctors">List of your doctors</string>
  <string name="label_numbers">Country phone numbers</string>
  <string name="sublabel_numbers">Enter emergency phone numbers of the selected country</string>
  <string name="emergencynum">Emergency services phone number</string>
  <string name="emergencynum_hint">Emergency services phone number</string>
  <string name="police">Police</string>
  <string name="police_hint">Police phone number</string>
  <string name="firedep">Fire department</string>
  <string name="firedep_hint">Fire department phone number</string>
  <string name="ambulance">Ambulance</string>
  <string name="ambulance_hint">Ambulance phone number</string>
  <string name="label_guardians">Guardian Angels</string>
  <string name="sublabel_guardians">Select your Guardian Angles from the phone directory</string>
  <string name="phonenum">Phone number</string>
  <string name="confirm_del_guardian">Are you sure you want to delete this Guardian Angel</string>
  <string name="error_only_numeric_digits_allowed">Only numeric digits</string>
  <string name="error_only_numeric_digits_range_allowed">Only numeric digits within the range %1$s - %2$s are allowed</string>
  <string name="error_this_field_cannot_contain_special_character">This field do not support any special character</string>
  <string name="error_only_standard_letters_are_allowed">Only standard letters are allowed</string>
  <string name="error_field_must_not_be_empty">This cell cannot be blank</string>
  <string name="error_email_address_not_valid">Invalid address</string>
  <string name="error_creditcard_number_not_valid">Credit card number is not valid</string>
  <string name="error_phone_not_valid">Not valid phone number</string>
  <string name="error_domain_not_valid">Domain name not valid</string>
  <string name="error_ip_not_valid">IP Address not valid</string>
  <string name="error_url_not_valid">Web URL is not valid</string>
  <string name="error_notvalid_personname">Not a valid first or last name.</string>
  <string name="error_notvalid_personfullname">Invalid name</string>
  <string name="error_date_not_valid">Invalid date input</string>
  <string name="label_perm">Emergency Alert Settings</string>
  <string name="sublabel_perm">Settings for alert types, and settings of the notified group of people for each case of emergency</string>
  <string name="perm_sos_title">SOS Alert</string>
  <string name="perm_sos_call">Calling Emergency number</string>
  <string name="perm_sos_sms">SMS notification to Emergency number</string>
  <string name="perm_police_title">Police Emergency Alert</string>
  <string name="perm_police_call">Calling Police Emergency number</string>
  <string name="perm_police_sms">SMS notification to Police Emergency number in the background</string>
  <string name="perm_firedep_title">Fire Department Emergency Alert</string>
  <string name="perm_firedep_call">Calling Fire Department Emergency number</string>
  <string name="perm_firedep_sms">SMS notification to Fire Department Emergency number</string>
  <string name="perm_amb_title">Ambulance Emergency Alert</string>
  <string name="perm_amb_call">Calling Ambulance Emergency number</string>
  <string name="perm_amb_sms">SMS notification to Ambulance Emergency number in the background</string>
  <string name="perm_ta_title">Terrorist Attack Emergency Alert</string>
  <string name="perm_ta_call">Calling Emergency Number</string>
  <string name="perm_ta_sms">SMS to Emergency Number in the background</string>
  <string name="perm_guardcall_title">Notify your Guardian Angels by phone call in the background</string>
  <string name="perm_guardsms_title">Notify your Guardian Angels by SMS in the background</string>
  <string name="password">Password</string>
  <string name="settingstitle">Settings</string>
  <string name="fullname">Full name</string>
  <string name="home">Address</string>
  <string name="playdemosos">Play your outgoing emergency message·</string>
  <string name="finishSOS">Stop SOS</string>
  <string name="passwordhint">The password for next time entering the app or web</string>
  <string name="spokenlangs">Spoken language</string>
  <string name="SendNow">Send</string>
  <string name="seconds">sec</string>
  <string name="closeview">Close</string>
  <string name="parentcontrol">Parent Control</string>
  <string name="help">Help</string>
  <string name="quicksettings">Quick settings</string>
  <string name="learnmode">Learing mode</string>
  <string name="learnmodesub">Signals will NOT be sended until this will activate</string>
  <string name="tracking">Tracking</string>
  <string name="trackingsub">Guardians can view my GPS position anytime</string>
  <string name="currentcountry">Country of residence</string>
  <string name="currentcountrysub">Setup residence country</string>
  <string name="activeguards">Active guardians</string>
  <string name="activeguardssub">Setup active guardians</string>
  <string name="detailsettings">Detailed settings</string>
  <string name="generalsettings">General settings</string>
  <string name="medilabel">Medical ID</string>
  <string name="guardshandling">Handling Guardians</string>
  <string name="protectedstracking">Tracking my protecteds</string>
  <string name="signalsetup">Emergency settings</string>
  <string name="informations">Informations</string>
  <string name="terms">Terms and privacy</string>
  <string name="appinvite">App invite sending</string>
  <string name="exit">Exit</string>
  <string name="timercontinue">Please unlock your phone to continue !</string>
    <string name="applang">App language</string>
</resources>