<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@+id/settingsGeneralScrollView"
    android:fadingEdge="none"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:overScrollMode="ifContentScrolls"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ProgressWheel="http://schemas.android.com/tools">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    >


    <LinearLayout
        android:id="@+id/notify"
        android:visibility="gone"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        >

        <LinearLayout
            android:id="@+id/cwr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/avatarpic"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_below="@+id/cwr"
                android:src="@drawable/avatar" />

            <Button
                android:id="@+id/close"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/buttonredborder"
                android:text="@string/closeview"
                android:textColor="#545454" />
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:background="@color/color_apps" />


        <LinearLayout
            android:id="@+id/tr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="Értesítendők"
                android:textColor="@color/color_apps"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/guards"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" />

        </LinearLayout>

        <View
            android:id="@+id/line"
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/color_apps">

        </View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">


            <com.blueobject.app.alive.ui.DetailsView
                android:id="@+id/taj"
                style="@style/settingsSelection"
                app:get_key="@string/insurancenum"
                app:get_type="show"
                app:get_typevalue="taj" />

            <com.blueobject.app.alive.ui.DetailsView
                style="@style/settingsSelection"
                app:get_key="@string/bloodtype"
                app:get_type="show"
                app:get_typevalue="blood" />

            <com.blueobject.app.alive.ui.DetailsView
                android:id="@+id/height"
                style="@style/settingsSelection"
                app:get_key="@string/height"
                app:get_type="show"
                app:get_typevalue="height" />

            <com.blueobject.app.alive.ui.DetailsView
                android:id="@+id/weight"
                style="@style/settingsSelection"
                app:get_key="@string/weight"
                app:get_type="show"
                app:get_typevalue="weight" />

            <com.blueobject.app.alive.ui.DetailsView
                android:id="@+id/allergy"
                style="@style/settingsSelection"
                app:get_key="@string/allergy"
                app:get_type="show"
                app:get_typevalue="allergy" />

            <com.blueobject.app.alive.ui.DetailsView
                android:id="@+id/medinfo"
                style="@style/settingsSelection"
                app:get_key="@string/medicalinfo"
                app:get_type="show"
                app:get_typevalue="medinfo" />

            <com.blueobject.app.alive.ui.DetailsView
                android:id="@+id/med"
                style="@style/settingsSelection"
                app:get_key="@string/medicines"
                app:get_type="show"
                app:get_typevalue="med" />


            <com.blueobject.app.alive.ui.DetailsView
                android:id="@+id/doctors"
                style="@style/settingsSelection"
                app:get_key="@string/doctors"
                app:get_type="show"
                app:get_typevalue="doctors" />

        </LinearLayout>

    </LinearLayout>

        <LinearLayout
            android:id="@+id/count"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="40dp"
            android:background="@color/white"
            android:gravity="center"
            android:minHeight="400dp"
            android:minWidth="300dp"
            android:orientation="vertical"
            android:visibility="visible">

            <Button
                android:id="@+id/closenow"
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/buttonredborder"
                android:text="@string/finishSOS"
                android:textColor="#545454" />

            <com.blueobject.app.alive.ui.ProgressWheel
                android:id="@+id/progressBar"
                android:layout_width="150dp"
                android:layout_height="150dp"
                ProgressWheel:barColor="#222"
                ProgressWheel:barLength="30dp"
                ProgressWheel:barWidth="8dp"
                ProgressWheel:delayMillis="75"
                ProgressWheel:rimColor="@color/color_apps"
                ProgressWheel:rimWidth="1dp"
                ProgressWheel:spinSpeed="30dp"
                ProgressWheel:text=""
                ProgressWheel:textColor="#222222"
                ProgressWheel:textSize="40sp" />

            <TextView
                android:id="@+id/timer_seconds"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center"
                android:tag="Thin"
                android:text="@string/seconds"
                android:textColor="@color/mine_shaft"
                android:textSize="20sp" />


            <Button
                android:id="@+id/sendNow"
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:layout_marginTop="70dp"
                android:background="@drawable/buttonredborder"
                android:text="@string/SendNow"
                android:textColor="@color/color_apps" />

            <TextView
                android:id="@+id/fwdText"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:textSize="18sp"
                android:gravity="center"
                android:text="@string/timercontinue"
                android:textColor="@color/color_apps" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>